--- a/index.html
+++ b/index.html
@@ -6,12 +6,38 @@
   <title>Document</title>
 </head>
 <body>
-  <canvas
+  <div>
+    <canvas
     id="canvas"
     style="border: 1px solid black;"
     height="400"
     width="400"
-  ></canvas>
+    ></canvas>
+  </div>
+  <form>
+    <fieldset>
+      <legend>raise/lower</legend>
+      <div>
+        <input type="radio" id="raise" name="adjust-height" value="raise" checked />
+        <label for="raise">raise</label>
+      </div>
+      <div>
+        <input type="radio" id="lower" name="adjust-height" value="lower"/>
+        <label for="lower">lower</label>
+      </div>
+    </fieldset>
+    <fieldset>
+      <legend>fill/adjust</legend>
+      <div>
+        <input type="radio" id="cell" name="cell-point-toggle" value="cell" checked />
+        <label for="cell">cell</label>
+      </div>
+      <div>
+        <input type="radio" id="point" name="cell-point-toggle" value="point"/>
+        <label for="point">point</label>
+      </div>
+    </fieldset>
+  </form>
   <script src="dist/bundle.js"></script>
 </body>
 </html>
