--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    #canvas-stage {
+      position: relative;
+      border: 1px solid black;
+      height: 400px;
+      width: 400px;
+    }
+    canvas {
+      position: absolute;
+    }
+  </style>
 </head>
 <body>
-  <div>
+  <div id="canvas-stage">
     <canvas
-    id="canvas"
-    style="border: 1px solid black;"
-    height="400"
-    width="400"
+      id="canvas"
+      height="400"
+      width="400"
+    ></canvas>
+    <canvas
+      id="canvas-hover"
+      height="400"
+      width="400"
     ></canvas>
   </div>
   <form>
