add very basic react

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </style>
 </head>
 <body>
+  <div id="root"></div>
   <div id="canvas-stage">
     <div id="canvas-container" oncontextmenu="return false;">
       <canvas
