--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       cursor: pointer;
     }
   </style>
+  <link href="./output.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
