--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       overflow: hidden;
       height: 800px;
       width: 800px;
-      background-image: url('./images/space_02.jpg');
+      background-image: url('./client/images/space_02.jpg');
       background-size: cover;
     }
 
