wip changes to ui layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <div id="root"></div>
+  <div id="ui-root"></div>
   <div id="canvas-stage">
     <div id="canvas-container" oncontextmenu="return false;">
       <canvas
