make the game render cover the full space

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     #canvas-stage {
       border: 1px solid black;
       overflow: hidden;
-      height: 800px;
-      width: 800px;
+      height: 100%;
+      width: 100%;
       background-image: url('./client/images/space_02.jpg');
       background-size: cover;
     }
