completely separate client and server builds to avoid weirdness and also adjust module resolution on server to get around annoying node issues

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
       overflow: hidden;
       height: 100%;
       width: 100%;
-      background-image: url('./client/images/space_02.jpg');
+      background-image: url('./images/space_02.jpg');
       background-size: cover;
     }
 
