separate canvas for grid and base for better redraw

--- a/client/index.html
+++ b/client/index.html
@@ -33,12 +33,17 @@
   <div id="canvas-stage" style="isolation: isolate">
     <div id="canvas-container" oncontextmenu="return false;">
       <canvas
-      id="canvas"
+      id="canvas-build"
       height="4000"
       width="4000"
       ></canvas>
       <canvas
-      id="canvas-build"
+      id="canvas-base"
+      height="4000"
+      width="4000"
+      ></canvas>
+      <canvas
+      id="canvas-grid"
       height="4000"
       width="4000"
       ></canvas>
