add to the interface

--- a/client/index.html
+++ b/client/index.html
@@ -51,8 +51,7 @@
       id="canvas-hover"
       height="4000"
       width="4000"
-      style="z-index: 10" <!-- this element needs to be above the other canvases, because its the one which handles the click events --></canvas>
-      ></canvas>
+      style="z-index: 10"></canvas></canvas>
     </div>
   </div>
   <script src="dist/bundle.js"></script>
