many changes: to display a greyscale heightmap

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
   <div id="ui-root"></div>
+  <!-- <img src="./src/render//heightmaps/tasmania.png" id="heightmap" /> -->
+  <!-- <img src="./src/render//heightmaps/tasmania_with_ocean.png" id="heightmap" /> -->
+  <!-- <img src="./src/render//heightmaps/europe.png" id="heightmap" /> -->
+  <img src="./src/render//heightmaps/italy.png" id="heightmap" />
+  <!-- <img src="./src/render//heightmaps/europe_normalised.png" id="heightmap" /> -->
+  <!-- <img src="./src/render//heightmaps/alps.png" id="heightmap" /> -->
+  <!-- <img src="./src/render//heightmaps/sydney.png" id="heightmap" /> -->
+  <canvas id="testing-canvas" width="10" height="10" style="z-index: 500; position: relative;"></canvas>
   <script type="module" src="/src/main.tsx"></script>
   <!-- <script src="dist/bundle.js"></script> -->
 </body>
